[project]
name = "writinggame"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.11.0",
    "diffusers>=0.35.2",
    "gtts>=2.5.4",
    "nicegui>=3.2.0",
    "openai>=2.6.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
